--- a/thesis.tex
+++ b/thesis.tex
@@ -120,10 +120,10 @@ Ebelechukwu Nwafor\\[0.2in]
 
 % If including appendices, uncomment the following lines,
 % adding more includes if needed.
-\StartAppendix
+%\StartAppendix
 %\include{AppendixA}         % Example of how to include an appendix
 
-%\include{vitae}         % Curriculum Vitae      REQUIRED
+\include{vitae}         % Curriculum Vitae      REQUIRED
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
