--- a/chapter3.tex
+++ b/chapter3.tex
@@ -17,7 +17,7 @@ In this section, we outline the components of our system and describe how proven
 
 \includegraphics{architecture.PNG}    
 \end{center}
-\caption{Edges and entities in OPM}
+\caption{Proposed Model}
 \label{autom}
 \end{figure}
 
