--- a/chapter6.tex
+++ b/chapter6.tex
@@ -4,13 +4,8 @@
 
 \section{Significance of the Result}
 
-Now that we have shown that we cannot solve narrow-interval 
-linear equation systems in general, what does this mean to the computing and 
-mathematical communities?  Unless P=NP, attempts at developing a feasible 
-algorithm to solve this problem in general will assuredly fail; however, the 
-very fact that there exists an algorithm for solving a large number of these 
-systems (see \cite{Lakeyev1995}) shows that work on solving a subclass of the 
-class of all narrow-interval linear equation systems is certainly a worthwhile 
+In this research, we present a provenance aware system that collects provenance information for IoT devices. This information can be beneficial in correcting and mitigating current and future attacks. We plan to continue refining our prototype, construct a model to guide data pruning, and create a taxonomy for secure data provenance in IoT systems that can inform our model.
+
 endeavor.
 
 \section{Future Work}
