--- a/thesis.tex
+++ b/thesis.tex
@@ -42,7 +42,7 @@
 \CommitteeChair{Gedare Bloom, Chair, Ph.D.}
 %\CommitteeChair{Gedare Bloom, Chair, Ph.D.}
 \CommitteeMembers{Wayne Patterson, Ph.D.}
-                 {Gloria Washington, Ph.D.}
+                 {Legand Burge, Ph.D.}
                  
 %Uncomment if you have a fourth member on your committee
 \AdditionalMember{Robert Rwebangira, Ph.D.}
