--- a/thesis.tex
+++ b/thesis.tex
@@ -123,7 +123,7 @@ Ebelechukwu Nwafor\\[0.2in]
 %\StartAppendix
 %\include{AppendixA}         % Example of how to include an appendix
 
-\include{vitae}         % Curriculum Vitae      REQUIRED
+%\include{vitae}         % Curriculum Vitae      REQUIRED
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
